src/assets/scss/_modal.scss
.modal-content.give-modal-content {
  .hide-modal {
    display: none;
  }

  .modal-header {
    border-bottom: none;
    padding-top: 30px;

    h3 {
      margin: 0;
      line-height: 1.25em;
    }

    p {
      margin-bottom: 0;
    }

    button.close {
      background: url("/assets/img/close-mobile.png");
      background-size: contain;
      width: 27px;
      height: 27px;
      opacity: 1;
      top: 10px;
      right: 10px;
      position: absolute;
      z-index: 1000;

      span {
        display: none;
      }
    }

    @media (min-width: 992px) {
      button.close {
        background: url("/assets/img/close-icon.png");
        background-size: contain;
        width: 36px;
        height: 36px;
        margin-top: -30px;
        margin-right: -85px;
        opacity: 1;
        position: static;

        span {
          display: none;
        }
      }
    }

    .border-bottom-small {
      margin-bottom: 0;
    }
  }

  .modal-body {

    .repeating-row {
      @include clearfix;

      &:after {
        border-bottom: 1px solid lighten($colorGrayscale-text, 60%);
        margin-bottom: $gutter/2;
        padding-bottom: $gutter/2;
        margin-right: 15px;
        margin-left: 15px;
        display: block;
      }

      &:last-child:after {
        padding-bottom: 0;
        border-bottom: 0;
      }
    }
  }

  .alert {
    margin-bottom: $gutter *.5;
  }
}

$row-eq-height-breakpoints: 549;
@each $breakpoint in $row-eq-height-breakpoints {
  @media screen and (max-width: #{$breakpoint}px) {
    .row-eq-height.break-flex-at-#{$breakpoint} {
      display: block !important;
    }
  }
}

.modal-sm {
  .give-modal-content {
    .modal-body {
      padding-top: 0;
    }
  }
}

body{
  @media (min-width: 1024px) {
    .modal-large {
        width: auto;
        max-width: 800px;
        margin: 30px auto;

        $modpad: $gutter*1;
        .modal-body {
          padding: $modpad $modpad 0 $modpad;
        }
        .modal-footer {
          padding-left: $modpad;
          padding-right: $modpad;
        }
    }
  }
}

.modal-content {
    .form-group {
        label.radio {
          padding-left: 23px;
          padding-bottom: 10px;
          text-transform: none;
        }
    }

  p {
    line-height: 1.425em;
  }
}

@media (min-width: 550px) {
	.modal-sm {
		width: 450px;
	}
}

#checkoutModal1, #checkoutModal2, #checkoutModal3 {
  .mb_x {
    margin-bottom: 29px !important;
  }
}

#checkoutModal2 {
  .bank-name, .account-type {
    width: 100% !important;
  }
}

#addNewPaymentModal{
	background-color: rgba(138, 138, 138, 0.9); 
	.light-font{
		font-size: 14px;
		color: #d3d3d3;
		font-weight: bold;
	}
}

.modal-backdrop {
  position: fixed;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  z-index: 1040;
  background-color: #000;
}

